  needed for subsequent bootstrap analyses
- Fix the mechanism for searching for a user's customized
  LaTeX preamble file (got broken at some point)
- LaTeX compilation: be more lenient -- getting some output
  on standard error does not necessarily mean that 
  compilation has failed
- Determining the main gretl directory: try to handle the
  case where the user has a stale ~/.gretl2rc file

7/30/2008 version 1.7.6
- Fix bug: revise the way that list arguments to user-defined
  functions are handled, to avoid potential namespace 
  collisions
- Add menu item: Variable/Normality test
- Add $xlist accessor: gets the list of regressors from the
  last model
- Add $version accessor: gets the gretl version
- Add $windows accessor (1 if running on MS Windows, else 0)
- Add $datatype accessor (see function help)
- Remove some redundant preferences items
- Fix bugs 1996156, 1996161, 2017872, 2027121
- MLE fixes
- Fix for RTF output from GUI model table
- Function package help: ensure this is not truncated
- Fix bug: incorrect generation of NAs when doing "genr unitdum" 
  on a sub-sampled panel dataset
- Add new panel data functions: pmax, pmin, pnobs
- Internal: recode parts of the gretl GUI to avoid dependence
  on deprecated GTK APIs
- Speed-ups for loops containing genr commands
- Several fixes for reading and writing gretl session files
- Function packages: add facility to append a sample script
- Enhancements for GUI function-packager
- File dialogs: try to ensure that focus falls back to the right
  window when such windows are closed

6/13/2008 version 1.7.5
- max() and min() functions: extend the syntax to allow a list
  argument
- Reading CSV data: automatically substitute '_' for illegal
  characters in variable names
- Support DESTDIR for make install
- Add Weibull distribution to the various gretl probability
  distribution functions
- Fix for parsing a restriction with leading numerical term
- New functions: pdf, sdc, msortby