@@ -26,6 +26,8 @@ version 1.7.7, in progress
   compilation has failed
 - Determining the main gretl directory: try to handle the
   case where the user has a stale ~/.gretl2rc file
+- Minor OS X fixes
+- Respect keyboard "Esc" as dialog "Cancel" more consistently  
 
 7/30/2008 version 1.7.6
 - Fix bug: revise the way that list arguments to user-defined
